{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 27,
  "lineage": "07f52f78-17f8-1898-87c6-1540e6550501",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-02187788b14fbff50",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-development-48256-nginx_profile",
            "id": "i-02187788b14fbff50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a4616fbb852c23d",
            "private_dns": "ip-10-0-0-125.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.125",
            "public_ip": "13.52.78.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dae1800cc4cb743f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d6d1f017da75abd",
            "tags": {
              "Name": "hustlrweb-Development-instsance0",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-Development-instsance0",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e446349b551630c9"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-030410ec9325abbba",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-development-48256-nginx_profile",
            "id": "i-030410ec9325abbba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6206bb7767204c4",
            "private_dns": "ip-10-0-1-250.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.250",
            "public_ip": "13.57.177.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035a773bc94bf0fd8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039eb8480fab65996",
            "tags": {
              "Name": "hustlrweb-Development-instsance1",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-Development-instsance1",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e446349b551630c9"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "hustlrweb-development-48256",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:loadbalancer/app/hustlrweb-Development-alb/8f4a4f74aff57406",
            "arn_suffix": "app/hustlrweb-Development-alb/8f4a4f74aff57406",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hustlrweb-Development-alb-1215780878.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:loadbalancer/app/hustlrweb-Development-alb/8f4a4f74aff57406",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hustlrweb-Development-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0190156e22b023c72"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d6d1f017da75abd"
              },
              {
                "subnet_id": "subnet-039eb8480fab65996"
              }
            ],
            "subnets": [
              "subnet-02d6d1f017da75abd",
              "subnet-039eb8480fab65996"
            ],
            "tags": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-0f3a16b74bb5363a1",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:listener/app/hustlrweb-Development-alb/8f4a4f74aff57406/64c749262a892985",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-Development-lbtg/73a38ea8c6af688f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:listener/app/hustlrweb-Development-alb/8f4a4f74aff57406/64c749262a892985",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:loadbalancer/app/hustlrweb-Development-alb/8f4a4f74aff57406",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "hustlrweb-Development-alb",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-Development-alb",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-Development-lbtg/73a38ea8c6af688f",
            "arn_suffix": "targetgroup/hustlrweb-Development-lbtg/73a38ea8c6af688f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-Development-lbtg/73a38ea8c6af688f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hustlrweb-Development-lbtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f3a16b74bb5363a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-Development-lbtg/73a38ea8c6af688f-20220909222339083600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-Development-lbtg/73a38ea8c6af688f",
            "target_id": "i-02187788b14fbff50"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-Development-lbtg/73a38ea8c6af688f-20220909222338967000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-Development-lbtg/73a38ea8c6af688f",
            "target_id": "i-030410ec9325abbba"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:security-group/sg-0190156e22b023c72",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0190156e22b023c72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hustlrweb-Development_lbsg",
            "name_prefix": "",
            "owner_id": "604628568255",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f3a16b74bb5363a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:security-group/sg-0e446349b551630c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e446349b551630c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hustlrweb-Development_ngsg",
            "name_prefix": "",
            "owner_id": "604628568255",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3a16b74bb5363a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:internet-gateway/igw-058d7890e266c2e0f",
            "id": "igw-058d7890e266c2e0f",
            "owner_id": "604628568255",
            "tags": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-0f3a16b74bb5363a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-058d7890e266c2e0f",
            "id": "r-rtb-04ae5e1bb1e9ffd391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ae5e1bb1e9ffd39",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:route-table/rtb-04ae5e1bb1e9ffd39",
            "id": "rtb-04ae5e1bb1e9ffd39",
            "owner_id": "604628568255",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3a16b74bb5363a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02908107bde278e39",
            "route_table_id": "rtb-04ae5e1bb1e9ffd39",
            "subnet_id": "subnet-02d6d1f017da75abd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a12b9830aa5694dd",
            "route_table_id": "rtb-04ae5e1bb1e9ffd39",
            "subnet_id": "subnet-039eb8480fab65996"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:subnet/subnet-02d6d1f017da75abd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d6d1f017da75abd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "604628568255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-0f3a16b74bb5363a1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:subnet/subnet-039eb8480fab65996",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039eb8480fab65996",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "604628568255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-0f3a16b74bb5363a1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:vpc/vpc-0f3a16b74bb5363a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01618296327d23be1",
            "default_route_table_id": "rtb-07f0b7b9b8d08e074",
            "default_security_group_id": "sg-014f5afc2addf6a56",
            "dhcp_options_id": "dopt-035c8fc4b56f7e278",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f3a16b74bb5363a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f0b7b9b8d08e074",
            "owner_id": "604628568255",
            "tags": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-Development-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "Development",
              "project": "Hustlrmantics-tech-bunker"
            }
          }
        }
      ]
    }
  ]
}